tests/test0095.exp
Parse error, unexpected := ( tests/test0095.ctr: 2 )
Key should always be followed by a property name!
